compiler/stage0/tests/snapshots/program__tests_fixtures_programs_actors_spawn_send_string.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/actors/spawn_send_string.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
hello actor
stderr:
<empty>
