compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_actor_message_signature_shapes.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/actor_message_signature_shapes.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
ready
stderr:
<empty>
