compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_block_expressions.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/block_expressions.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
42
16
scoped
stderr:
<empty>
