compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_actor_id_unknown_scope.snap
---
source: tests/fixtures.rs
assertion_line: 2971
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_actor_id_unknown_scope.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
scoped same: ok
scoped mixed: expected String, got i64
existential mixed: ok
stderr:
<empty>
