compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_actor_local_validation.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_actor_local_validation.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
unsupported-annotation:count
unsupported-annotation:inner_count
missing-receive
stderr:
<empty>
