compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_actor_message_constraints.snap
---
source: tests/fixtures.rs
assertion_line: 4697
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_actor_message_constraints.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
record:ActorId<box<i64>>
variant:ActorId<option<i64>>
list:ActorId<List<i64>>
heterogeneous:ActorId<Unknown>
wildcard:ActorId<Unknown>
stderr:
<empty>
