compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_apply_metadata_refinement.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_apply_metadata_refinement.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
apply:i64
lambda:y:i64
actor:y:i64
stderr:
<empty>
