compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_call_resolution.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_call_resolution.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
arity mismatch print; unknown callee Result.missing; nested call Result.is_ok
stderr:
<empty>
